--- a/src/ui/QGCMAVLinkLogPlayer.ui
+++ b/src/ui/QGCMAVLinkLogPlayer.ui
@@ -57,14 +57,40 @@
     </widget>
    </item>
    <item>
-    <widget class="QProgressBar" name="positionProgressBar">
-     <property name="value">
-      <number>0</number>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Position:</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="speedLabel">
+    <widget class="QLabel" name="positionLabel">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QSlider" name="positionSlider">
+     <property name="pageStep">
+      <number>0</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="invertedAppearance">
+      <bool>false</bool>
+     </property>
+     <property name="invertedControls">
+      <bool>false</bool>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::NoTicks</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="speedTitleLabel">
      <property name="toolTip">
       <string>Current replay speed</string>
      </property>
@@ -76,6 +102,13 @@
      </property>
      <property name="text">
       <string>Speed</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="speedLabel">
+     <property name="text">
+      <string>100%</string>
      </property>
     </widget>
    </item>
@@ -97,10 +130,10 @@
       <number>100</number>
      </property>
      <property name="value">
-      <number>50</number>
+      <number>23</number>
      </property>
      <property name="sliderPosition">
-      <number>50</number>
+      <number>23</number>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
